<resources>
    <string name="app_name">Quick Maths</string>
    <string name="help_info">
        Quick Maths is quick arithmetic game
        \n
        \n
        There are 4 levels:\n
        \t Level 1: Addition from 1 - 10\n
        \t Level 2: Addition from 1 - 10 \n
        \t\t\t\t\t\t\t\t\tSubtraction from 1 - 10 \n
        \t Level 3: Addition from 1 - 50\n
        \t\t\t\t\t\t\t\t\tSubtraction from 1 - 50\n
        \t\t\t\t\t\t\t\t\t1 - 5 times tables\n
        \t Level 4: Addition from 1 - 50\n
        \t\t\t\t\t\t\t\t\tSubtraction from 1 - 50 \n
        \t\t\t\t\t\t\t\t\t1 - 10 times tables\n
        \t\t\t\t\t\t\t\t\tInteger division from 1 - 50\n
        \n
        \n
        Answer the question by typing on the number pad displayed and pressing enter. \n
        \n
        Press the C button or shake the device to clear an existing answer \n
        \n
        Your ten best scores per level will automatically be saved into the High Scores.
    </string>
    <string name="high_scores">HIGH SCORES</string>
    <string name="result">result</string>
    <string name="inital_score">Score: \n0</string>
    <string name="initial_question">0 + 0 =</string>
    <string name="initial_answer">\?</string>
    <string name="clear">C</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_0">0</string>
    <string name="enter">Enter</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="play">Play</string>
    <string name="how_to_play">How to Play</string>
    <string name="settings">Settings</string>
    <string name="sample">sample</string>
    <string name="back">Back</string>
</resources>