<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/score"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center|start"
            android:paddingStart="0dp"
            android:paddingEnd="20dp"
            android:text="@string/inital_score"
            android:textColor="#ffffffff"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.cp3406.educationalgame.TimerView
            android:id="@+id/timer"
            android:layout_width="0dp"
            android:layout_height="250sp"
            android:layout_weight="1"
            android:gravity="center|end"
            android:paddingEnd="20dp"
            android:textColor="#ffffffff"
            android:textSize="20sp"
            android:textStyle="bold"
            app:progress="35"
            app:progressBarThickness="8sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/question"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="2dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:layout_weight="1"
            android:background="#ffffffff"
            android:gravity="center|end"
            android:padding="5dp"
            android:text="@string/initial_question"
            android:textColor="#ff333333"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/answer"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginTop="2dp"
            android:layout_weight="1"
            android:background="#ffffffff"
            android:gravity="center|start"
            android:padding="5dp"
            android:text="@string/initial_answer"
            android:textColor="#ff333333"
            android:textSize="30sp" />

        <Button
            android:id="@+id/clear"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/clear"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="5dp"
            android:tag="7"
            android:text="@string/_7"
            android:textColor="#ffcccccc"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn8"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="5dp"
            android:tag="8"
            android:text="@string/_8"
            android:textColor="#ffcccccc"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn9"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="5dp"
            android:tag="9"
            android:text="@string/_9"
            android:textColor="#ffcccccc"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="5dp"
            android:tag="4"
            android:text="@string/_4"
            android:textColor="#ffcccccc"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="5dp"
            android:tag="5"
            android:text="@string/_5"
            android:textColor="#ffcccccc"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="5dp"
            android:tag="6"
            android:text="@string/_6"
            android:textColor="#ffcccccc"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="5dp"
            android:tag="1"
            android:text="@string/_1"
            android:textColor="#ffcccccc"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="5dp"
            android:tag="2"
            android:text="@string/_2"
            android:textColor="#ffcccccc"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="5dp"
            android:tag="3"
            android:text="@string/_3"
            android:textColor="#ffcccccc"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn0"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="5dp"
            android:tag="0"
            android:text="@string/_0"
            android:textColor="#ffcccccc"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/enter"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="2"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/enter"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.appcompat.widget.LinearLayoutCompat>