<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center">
        <Button
            android:id="@+id/play_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="5dp"
            android:padding="20dp"
            android:text="@string/play"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/help_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/play_btn"
            android:layout_centerHorizontal="true"
            android:layout_margin="5dp"
            android:padding="20dp"
            android:text="@string/how_to_play"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/score_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/help_btn"
            android:layout_centerHorizontal="true"
            android:layout_margin="5dp"
            android:padding="20dp"
            android:text="@string/high_scores"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/settings_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/score_btn"
            android:layout_centerHorizontal="true"
            android:layout_margin="5dp"
            android:padding="20dp"
            android:text="@string/settings"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>
</ScrollView>